--- a/index.html
+++ b/index.html
@@ -101,13 +101,19 @@
   <h1>Explore Features</h1>
 <div class="menu">
   <div class="one">
-
+    <img src="./img/track.png" alt="">
+    <h3>Live COVID Tracker</h3>
+    <p>Click to view our live covid-19 tracker and stay informed about the outspread and it's influence in your community.  Maybe the statistics will make you stay at home if  words don't. <br> <br><br></p> 
   </div>
   <div class="one s">
-
+    <img src="./img/health.png" alt="">
+    <h3>Health Checker</h3>
+    <p>Think you have caught the virus? No need to panic, all you have to do is tell us your symptoms anonymously and we will guide you with a suitable option and get you in touch with suitable authorities in no time! <br><br></p>
   </div>
   <div class="one s">
-
+    <img src="./img/meditate.png" alt="">
+    <h3>Exercises & Meditation</h3>
+    <p>During these trying times, not only should one take care of themseleves physically, but also mentally. We help in this process as much as we can by updating videos and articles related to mental health and exercise daily! <br><br></p> 
   </div>
 </div>
 </div>
