--- a/index.html
+++ b/index.html
@@ -117,5 +117,79 @@
   </div>
 </div>
 </div>
+<div class="info">
+  <h1>Stay Safe. But how?</h1>
+  <div class="inf social">
+    <div class="sim">
+      <section>
+        <canvas id="population" width="2000" height="1200"></canvas>
+        <div class="info">
+          <canvas id="graph" height="400" width="1500"></canvas>
+          <ul>
+            <li><span>Recovered</span><span id="recovered">0</span></li>
+            <li><span>Healthy</span><span id="healthy">0</span></li>
+            <li><span>Sick</span><span id="sick">0</span></li>
+            <li><span>Dead</span><span id="dead">0</span></li>
+          </ul>
+        </div>
+        <div id="overlay" class="active">
+          <p>
+            A covid-19 social distancing simulator
+          </p>
+          <div class="field is-grouped">
+            <span class="select">
+              <select id="quarantine">
+                <option value="0" selected>No Social Distancing</option>
+                <option value="0.1">One-Tenth Self-Quarantine</option>
+                <option value="0.25">One Quarter Self-Quarantine</option>
+                <option value="0.33">One Third Self-Quarantine</option>
+                <option value="0.5">One Half Self-Quarantine</option>
+                <option value="0.75">Three Quarters Self-Quarantine</option>
+                <option value="1">Everyone Self-Quarantines</option>
+              </select>
+            </span>
+            &nbsp;
+            <button class="button is-primary" id="run">Run</button>
+          </div>
+        </div>
+      </section>
+    </div>
+    <div class="sidetxt">
+    <h2>Social Distancing</h2>
+    <p>
+      Social distancing, also called “physical distancing,” means keeping a safe space between yourself and other people who are not from your household. <br> <br>
+      To practice social or physical distancing, stay at least 6 feet (about 2 arms’ length) from other people who are not from your household in both indoor and outdoor spaces.<br> <br>
+      Keeping space between you and others is one of the best tools we have to avoid being exposed to this virus and slowing its spread in communities.
+      <br> <br>
+      Concluding from the results of the simulation on the left, the number of people doing outdoor activites is directly proportional to the speed and spread of coronavirus.
+    </p>
+  </div>
+  </div>
+  <div class="inf aware">
+    <div class="sidetxt">
+    <h2>Being Aware</h2>
+    <p>
+      Social distancing, also called “physical distancing,” means keeping a safe space between yourself and other people who are not from your household. <br> <br>
+      To practice social or physical distancing, stay at least 6 feet (about 2 arms’ length) from other people who are not from your household in both indoor and outdoor spaces.<br> <br>
+      Keeping space between you and others is one of the best tools we have to avoid being exposed to this virus and slowing its spread in communities.
+      <br> <br>
+      Concluding from the results of the simulation on the left, the number of people doing outdoor activites is directly proportional to the speed and spread of coronavirus.
+    </p>
+  </div>
+  </div>
+  <div class="inf sanit">
+    <div class="sidetxt">
+    <h2>Proper Sanitization</h2>
+    <p>
+      Social distancing, also called “physical distancing,” means keeping a safe space between yourself and other people who are not from your household. <br> <br>
+      To practice social or physical distancing, stay at least 6 feet (about 2 arms’ length) from other people who are not from your household in both indoor and outdoor spaces.<br> <br>
+      Keeping space between you and others is one of the best tools we have to avoid being exposed to this virus and slowing its spread in communities.
+      <br> <br>
+      Concluding from the results of the simulation on the left, the number of people doing outdoor activites is directly proportional to the speed and spread of coronavirus.
+    </p>
+  </div>
+  </div>
+</div>
+<script src="./js/main.js"></script>
 </body>
 </html>
