--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>coVida</title>
   <link rel="stylesheet" href="./css/default.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
   <div class="header">
@@ -89,7 +90,7 @@
 
 </div>
 <div class="headertext">
-  <h1>
+  <h1 >
     co<span style="color:#f43a62;">V</span>ida
   </h1>
   <h3>
@@ -98,30 +99,30 @@
 </div>
 </div>
 <div class="first">
-  <h1>Explore Features</h1>
+  <h1 >Explore Features</h1>
 <div class="menu">
-  <div class="one">
+  <div class="one" data-aos="fade-up" data-aos-duration="1000">
     <img src="./img/track.png" alt="">
     <h3>Live COVID Tracker</h3>
     <p>Click to view our live covid-19 tracker and stay informed about the outspread and it's influence in your community.  Maybe the statistics will make you stay at home if  words don't. <br> <br><br></p> 
   </div>
-  <div class="one s">
+  <div class="one s" data-aos="fade-up" data-aos-delay="250" data-aos-duration="1000"> 
     <img src="./img/health.png" alt="">
     <h3>Health Checker</h3>
     <p>Think you have caught the virus? No need to panic, all you have to do is tell us your symptoms anonymously and we will guide you with a suitable option and get you in touch with suitable authorities in no time! <br><br></p>
   </div>
-  <div class="one s">
-    <img src="./img/meditate.png" alt="">
+  <div class="one s" data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000">
+    <img src="./img/meditate.png" alt="" >
     <h3>Exercises & Meditation</h3>
     <p>During these trying times, not only should one take care of themseleves physically, but also mentally. We help in this process as much as we can by updating videos and articles related to mental health and exercise daily! <br><br></p> 
   </div>
 </div>
 </div>
-<div class="info">
-  <h1>Stay Safe. But how?</h1>
+<div class="info" >
+  <h1 data-aos="zoom-in" data-aos-delay="100" data-aos-duration="1000">Stay Safe. But how?</h1>
   <div class="inf social">
     <div class="sim">
-      <section>
+      <section  data-aos="fade-up"  data-aos-duration="1000" data-aos-delay="500">
         <canvas id="population" width="2000" height="1200"></canvas>
         <div class="info">
           <canvas id="graph" height="400" width="1500"></canvas>
@@ -154,7 +155,7 @@
         </div>
       </section>
     </div>
-    <div class="sidetxt">
+    <div class="sidetxt"  >
     <h2>Social Distancing</h2>
     <p>
       Social distancing, also called “physical distancing,” means keeping a safe space between yourself and other people who are not from your household. <br> <br>
@@ -165,19 +166,38 @@
     </p>
   </div>
   </div>
-  <div class="inf aware">
+  <div class="inf aware" >
     <div class="sidetxt">
     <h2>Being Aware</h2>
     <p>
-      Social distancing, also called “physical distancing,” means keeping a safe space between yourself and other people who are not from your household. <br> <br>
-      To practice social or physical distancing, stay at least 6 feet (about 2 arms’ length) from other people who are not from your household in both indoor and outdoor spaces.<br> <br>
-      Keeping space between you and others is one of the best tools we have to avoid being exposed to this virus and slowing its spread in communities.
+      The median age of patients is between 49 and 56 years. The incubation period of this virus has been reported to be 5.2 days. The clinical syndrome is nonspecific, which makes it clinically indistinguishable from other viral respiratory illnesses. Some patients may even be asymptomatic.
+       <br> <br>
+      Such an unpredictable yet dangerous disease needs to be taken special care of. Any strong symptoms of covid-19 should always be checked and consulatation with the nearest doctor is vital.<br> <br>
+      Awareness does not only mean taking care of yourself. It also involves taking care of your surroundings and peers and if they catch the virus, there's a high chance that you will too.
       <br> <br>
-      Concluding from the results of the simulation on the left, the number of people doing outdoor activites is directly proportional to the speed and spread of coronavirus.
+      Some Important symptoms related to covid-19:
     </p>
+    <div class="simp" >
+    <img src="./img/cough.gif" alt="">
+    <p>High fever</p>
   </div>
+  <div class="simp">
+    <img src="./img/fever.gif" alt="">
+    <p>Frequent Coughing</p>
   </div>
-  <div class="inf sanit">
+  <div class="simp">
+    <img src="./img/tired.gif" alt="">
+    <p>Tiredness</p>
+  </div>
+</div>
+<div class='foto'  >
+  <img src="./img/coroner.svg" alt="" data-aos="fade-up" data-aos-duration="1000" >
+</div>
+  </div>
+  <div class="inf sanit" >
+    <div class='dhole'>
+      <img src="./img/coron.svg" alt="" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000">
+    </div>
     <div class="sidetxt">
     <h2>Proper Sanitization</h2>
     <p>
@@ -191,5 +211,9 @@
   </div>
 </div>
 <script src="./js/main.js"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 </body>
 </html>
