--- a/web/tracker.html
+++ b/web/tracker.html
@@ -16,15 +16,41 @@
 
   </head>
   <style media="screen">
+		@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+		button{
+			background-color: black;
+			color:white;
+			outline: none;
+			border: 1px solid white;
+			border-radius: 50px;
+			padding:20px 20px;
+			margin-left:50%;
+			transform:translateX(-50%);			cursor: pointer;
+			font-family: 'Poppins', sans-serif;
+			font-size: 18px;
+			font-weight: 300;
+		}
+		button:hover{
+			background-color: white;
+			color:black;
+			outline: none;
+			border: 1px solid black;
+			border-radius: 50px;
+			padding:20px 20px;
+			margin-left:50%;
+			transform:translateX(-50%);
+			transition: 0.2s linear;
 
+		}
     body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; background-color:#121212;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; background-color:#121212;padding: 0px;margin: 0px;overflow: hidden;
     }
 
     #chartdiv {
       max-width: 100%;
-      height: 800px;
-      background-color:#121212;
+      height:90vh;
+			background-color:#121212;
+			margin: 0px;
     }
 
   </style>
@@ -64,8 +90,7 @@
 
   	var sliderAnimation;
 
-  	//////////////////////////////////////////////////////////////////////////////
-  	//////////////////////////////////////////////////////////////////////////////
+
 
   	var countryIndexMap = {};
   	var list = covid_world_timeline[0].list;
@@ -109,8 +134,7 @@
   	}
 
 
-  	//////////////////////////////////////////////////////////////////////////////
-  	//////////////////////////////////////////////////////////////////////////////
+
 
   	var container = am4core.create("chartdiv", am4core.Container);
   	container.width = am4core.percent(100);
@@ -715,7 +739,6 @@
   	}
 
   	function updateMapData(data) {
-  		//modifying instead of setting new data for a nice animation
   		bubbleSeries.dataItems.each(function(dataItem) {
   			dataItem.dataContext.confirmed = 0;
   			dataItem.dataContext.deaths = 0;
@@ -786,6 +809,11 @@
 
   	setTimeout(updateSeriesTooltip, 3000);
 </script>
-
+<button onclick="returnhome()">Return Home</button>
+<script>
+	function returnhome(){
+		window.location.href="../index.html"
+	}
+</script>
   </body>
 </html>
