--- a/web/check.html
+++ b/web/check.html
@@ -7,7 +7,7 @@
 	   </title>
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-      <script src="js/symptom.js"></script>
+      <script src="../js/check.js"></script>
   </head>
   <body>
 
